<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/blue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvAppTitle"
                android:text="@string/Title"
                android:padding="10dp"
                android:textSize="25sp"
                android:background="@color/red"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <!-- Total number of students -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Total"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/etTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Group A students -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/A"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/etA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Group B students -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/B"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/etB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Group C students -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/C"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/etC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Group D students -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/D"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/etD"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Group F students -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/F"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/etE"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:background="@drawable/edittext_background"
                    android:padding="12dp"/>
            </LinearLayout>

            <!-- Button -->
            <Button
                android:id="@+id/btnCompute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Button"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/teal_700"
                android:textColor="@color/white"
                android:onClick="Compute"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
